# ray-caster

./: .gitignore  CMakeLists.txt  README.md
src/: common.hpp  main.cpp  polygon.cpp  polygon.hpp  user.cpp  window.cpp  window.hpp
